update swagger documentation
update swagger documentation and users/current response body and transactions/stats response body to make a balance out of the transactions array
