# controllers/currentUser.js
@@ -1,7 +1,13 @@
 const currentUser = async (req, res) => {
   const { email, token, name } = req.user;
 
-  res.json({ email, token, name });
+  res.json({
+    status: "success",
+    code: 200,
+    userInfo: {
+      email, token, name
+    }
+  });
 };
 
 module.exports = { currentUser }
